# mysql_cpp

./: CMakeLists.txt
cmake/Modules/: FindMySql.cmake
include/ManagerDatabase/: ae.h  database.h  files.h  filesystem.h  instance.h  partitions.h  patient.h  series.h  study.h
include/ManagerDatabase/table_gen/: Ae.h  Files.h  Filesystem.h  Instance.h  Partitions.h  Patient.h  Series.h  Study.h
libs/Date/lib/cmake/date/: dateTargets.cmake
libs/mysql_connector_cpp/: CMakeLists.txt
libs/mysql_connector_cpp/include/sqlpp11/mysql/: connection.h
libs/mysql_layer_cpp/include/sqlpp11/: connection.h
libs/mysql_layer_cpp/lib/cmake/Sqlpp11/: Sqlpp11Targets.cmake
src/: main.cc
src/ManagerDatabase/: ae.cpp  files.cpp  filesystem.cpp  instance.cpp  partitions.cpp  patient.cpp  series.cpp  study.cpp
